# monilogger

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build-and-test.sh  pyproject.toml  setup.py  upload.sh
.github/workflows/: cmake.yml
examples/fibonacci/: README.md
examples/fibonacci/src/: CMakeLists.txt  _pi_cffi.c  example_callbacks.py  fibonacci_embedding.h  fibonacci_main.cc  numba_experiments.py  xp3.py
examples/simple-embedding/: README.md
examples/simple-embedding/src/: CMakeLists.txt  SimpleEmbedding.cc  example_moniloggers.py
experimental/numba/: xp2.py
experimental/scihook-cppgen/: README.md  requirements.txt  setup.py
experimental/scihook-cppgen/scihook-cppgen/: __init__.py  cli.py  contexts_template.mako  generator.py  include_parser.py  parser.py  trigger_template.mako
experimental/scihook-cppgen/scihook_cppgen/: __init__.py  cli.py  generator.py  parser.py  trigger_template.mako
include/: SciHook.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  MoniLogger.cc  SciHook.cc  monilogger_module.cc  scihook_module.cc
src/api/monilogger/include/: MoniLogger.h
src/api/scihook/: scihook.py
src/api/scihook/include/: SciHook.h
src/bindings/: CMakeLists.txt  scihook_module.cc
src/bindings/cpp/: README.md
src/bindings/cpp/examples/fibonacci/src/: example_moniloggers.py  fibonacci.cc  fibonacci.h  fibonacci_embedding.cc  fibonacci_embedding.h
src/bindings/cpp/examples/simple-embedding/: README.md  build-and-run.sh
src/bindings/cpp/examples/simple-embedding/src/: CMakeLists.txt  SimpleEmbedding.cc
src/bindings/scihook/: scihook.py
src/core/: SciHook.cc
tests/: tests.py
